public/stylesheets/contents/item.css
/* ... */
.compact .section-fields .field { gap : 10px; padding : 2px 0px; }
.compact .section-fields .field-label { font-size : 12px; padding : 0px; max-width : 30%; min-width : 30%; width : 30%; }
.compact .section-fields .field-value.image > img { max-width : 150px; }
.compact .section-fields .field-value.readonly input { font-size : 12px; padding : 0px 0px; }
.compact .section-fields .field-value.readonly div { font-size : 12px; padding : 0px 0px; }
.compact .section-fields .field-value.computed { font-size : 12px; padding-top : 0px; }
.compact .section-fields .field-value.checkbox > input { margin : 3px 0px 0px 0px; }
.compact .section-fields .field .field-unit { font-size : 12px; padding : 0px; }
.compact p { margin : 0px;  padding : 0px; }



/*  ATTACHMENTS */
/* ----------------------------------------------------------------------------- */
.attachments {
    display : flex;
    gap     : var(--spacer-xs);  
}
.attachments.list {
    flex-direction: column;
}
.attachment {
    cursor  : pointer;
    padding : 8px 20px 8px 10px;
    width   : calc(100% - 32px) !important;
}
.attachment-graphic { 
    display         : flex;
    flex-direction  : column;
    justify-content : center;
    min-width       : 64px;
    width           : 64px;
}
.attachment-graphic > img { 
    height : 80%;
    object-fit: contain;
    width : 80%;
}
.attachment-details {
    overflow: hidden;
    max-width : calc(100% - 90px);
}
.attachment-name {
    font-weight : 700;
    line-height : 24px;
}
.attachment-user, 
.attachment-date {
    font-size: 12px;
    line-height: 16px;
}
#frame-download {
    display : none;
}
.xxxs .attachment {
    padding : 4px 10px;
}
.xxxs .attachment-user,
.xxxs .attachment-date {
    display : none;
}

.surface-level-1 .attachment { background-color : var(--color-surface-level-3); }
.surface-level-2 .attachment { background-color : var(--color-surface-level-4); }
.surface-level-3 .attachment { background-color : var(--color-surface-level-5); }
.surface-level-4 .attachment { background-color : var(--color-surface-level-2); }
.surface-level-5 .attachment { background-color : var(--color-surface-level-2); }
.surface-level-1 .attachment:hover { background-color : var(--color-surface-level-4); }
.surface-level-2 .attachment:hover { background-color : var(--color-surface-level-5); }
.surface-level-3 .attachment:hover { background-color : var(--color-surface-level-4); }
.surface-level-4 .attachment:hover { background-color : var(--color-surface-level-3); }
.surface-level-5 .attachment:hover { background-color : var(--color-surface-level-3); }



/*  BOM */
/* ----------------------------------------------------------------------------- */
.bom-multi-select-action,
.bom-single-select-action {
    display : none;
}
.bom-search-input {
    width : 50px;
}
.bom-table {
    table-layout: fixed;
}
.bom-item {
    cursor : pointer;
}
.bom-item > td {
    padding : 4px 6px;
}
.bom-item > td:first-child {
    border-left : 1px solid transparent;
}
.bom-item > td:last-child {
    border-right : 1px solid transparent;
}
.bom-item.result > td.bom-color { 
    background : var(--color-status-yellow); 
}

.bom-item.selected > td {
    background : var(--color-selected-background);
}
.bom-item:hover td {
    background-color : var(--color-hover-background) !important;
    border-color     : var(--color-blue-500) !important;
}
.bom-color {
    background  : transparent;
    padding     : 0px !important;
    width       : 6px;
}
.bom-nav {
    cursor          : pointer;
    font-size       : 20px;
    line-height     : 5px;
    padding-right   : 4px;
    width           : 16px;
    position        : relative;
    top             : 5px;
}
.bom-nav:before { 
    content: '\e5cf';
 }
.bom-nav.collapsed:before { 
    content: '\e5cc'; 
}
.bom-nav:hover { 
    color : var(--color-hover-border); 
}
.bom-first-col {
    white-space     : nowrap;
    overflow        : hidden;
    text-overflow   : ellipsis;
}
.bom-number {
    min-width   : 28px;
    padding     : 5px;
    font-weight : bold;
    display     : inline-block;
}   
.bom-descriptor {
    padding : 4px;
}
.bom-actions > div {
    display : none;
}
.bom-item:hover .bom-actions > div {
    display : flex;
}
.bom-column-quantity {
    text-align : right;
}
.bom-quantity {
    font-weight : bold;
    text-align  : right;
    width       : 60px;
}
.bom-content {
    bottom : 48px;
}

.bom-counters {
    background      : var(--color-surface-level-4);
    display         : flex;
    font-size       : 12px;
    gap             : var(--spacer-m);
    padding         : 8px 20px;
    justify-content : space-between;
    position        : absolute;
    right           : 0px;
    bottom          : 0px;
    left            : 0px;
}
.bom-counters > div {
    border-bottom   : 2px solid transparent;
    flex-grow       : 1;
    height          : 20px;
    line-height     : 20px;
    padding         : 2px 4px;
    text-align      : center;
    width           : 25%;
}
.no-bom-counters .bom-content {
    bottom : 0px;
}
.no-bom-counters .bom-counters {
    display : none !important;
}
.bom-counter-filtered.not-empty {
    border-color : var(--color-status-yellow) !important;
}
.bom-counter-selected.not-empty {
    border-color : var(--color-hover-border) !important;
}


.bom-level-1  .bom-first-col { padding-left :  25px; }
.bom-level-2  .bom-first-col { padding-left :  46px; }
.bom-level-3  .bom-first-col { padding-left :  66px; }
.bom-level-4  .bom-first-col { padding-left :  86px; }
.bom-level-5  .bom-first-col { padding-left : 106px; }
.bom-level-6  .bom-first-col { padding-left : 126px; }
.bom-level-7  .bom-first-col { padding-left : 146px; }
.bom-level-8  .bom-first-col { padding-left : 166px; }
.bom-level-9  .bom-first-col { padding-left : 186px; }
.bom-level-10 .bom-first-col { padding-left : 206px; }

tr.node.bom-level-1  .bom-first-col  { padding-left :   4px; }
tr.node.bom-level-2  .bom-first-col  { padding-left :  26px; }
/* ... */

